<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/fab_margin"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="-61dp">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="143dp"
            android:layout_height="143dp"
            android:contentDescription="@string/profile_photo"
            android:visibility="visible"
            app:srcCompat="@android:mipmap/sym_def_app_icon"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/sample_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/genderText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sample_gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sample_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>